# SOLATv3.1

./: .env.example  .gitignore  BUILD_LOG.md  CLAUDE.md  GEMINI.md  LIVE_READINESS_ROADMAP.md  NEXT_STEPS.md  README.md  ROADMAP.md  finish_phased_plan.md  package.json  pnpm-lock.yaml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
engine/: .env.example  README.md  pyproject.toml
engine/docs/: ARCHITECTURE.md  ROADMAP.md  SECURITY.md  streaming.md
engine/scripts/: ai_tuner.py  analyze_sweep_interim.py  check_data_quality.py  compare_trade_counts.py  derive_timeframes.py  import_histdata.py  run_backtest.py  run_grand_sweep.py  run_walk_forward.py  validate_artefacts.py
engine/solat_engine/: __init__.py  config.py  logging.py  main.py  prelive_check.py
engine/solat_engine/api/: __init__.py  autopilot_routes.py  backtest_routes.py  catalog_routes.py  chart_routes.py  data_routes.py  diagnostics_routes.py  execution_routes.py  ig_routes.py  market_data_routes.py  optimization_routes.py  rate_limit.py  recommendation_routes.py
engine/solat_engine/autopilot/: service.py
engine/solat_engine/backtest/: __init__.py  broker_sim.py  engine.py  metrics.py  models.py  parallel_sweep.py  portfolio.py  sizing.py  sweep.py  sweep_utils.py
engine/solat_engine/broker/: __init__.py
engine/solat_engine/broker/ig/: __init__.py  client.py  rate_limit.py  redaction.py  types.py
engine/solat_engine/catalog/: __init__.py  models.py  seed.py  store.py  symbols.py
engine/solat_engine/domain/: __init__.py  bar.py  fill.py  instrument.py  order.py  position.py  signal.py
engine/solat_engine/execution/: __init__.py  gates.py  kill_switch.py  ledger.py  models.py  reconciliation.py  risk_engine.py  router.py  safety.py
engine/solat_engine/interfaces/: __init__.py  backtest_engine.py  broker_adapter.py  data_provider.py  strategy.py
engine/solat_engine/market_data/: __init__.py  backfill.py  bar_builder.py  controller.py  models.py  polling.py  publisher.py  streaming.py
engine/solat_engine/optimization/: __init__.py  allowlist.py  models.py  recommended_set.py  selector.py  walk_forward.py
engine/solat_engine/runtime/: __init__.py  artefacts.py  cache.py  event_bus.py  jobs.py  run_context.py  ws_throttle.py
engine/solat_engine/scheduler/: __init__.py  service.py
engine/solat_engine/strategies/: __init__.py  elite8.py  elite8_hardened.py  indicators.py
engine/tests/: __init__.py  api_fixtures.py  conftest.py  test_aggregation.py  test_allowlist_and_events.py  test_artefact_contracts.py  test_artefact_index.py  test_autopilot.py  test_backtest_data_errors.py  test_backtest_endpoints.py  test_backtest_engine_basic.py  test_bar_builder.py  test_broker_sim.py  test_cache.py  test_catalog.py  test_chart_overlays.py  test_data_endpoints.py  test_demo_e2e.py  test_derive_all.py  test_domain.py  test_elite8_regime_hardening.py  test_emergency_halt.py  test_execution_endpoints.py  test_health.py  test_ig_client.py  test_ig_endpoints.py  test_live_gates.py  test_market_routes.py  test_metrics.py  test_optimization_routes.py  test_parallel_sweep.py  test_parquet_store.py  test_quality.py  test_recommendation_routes.py  test_reconciliation.py  test_risk_engine.py  test_safety.py  test_selector.py  test_singleton_reconfig.py  test_streaming.py  (+7 more)
engine/tests/chaos/: README.md  __init__.py  conftest.py
engine/tests/chaos/fixtures/: __init__.py  broker_chaos.py  disk_chaos.py  fake_ig.py  network_chaos.py
engine/tests/chaos/tier1_data_corruption/: __init__.py  test_disk_full.py  test_ledger_corruption.py  (+2 more)
engine/tests/fixtures/: app_fixtures.py
engine/tests/strategies/: __init__.py  synthetic_data.py
scripts/: dev.sh  (+3 more)
(+169 files in other folders)
