[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solat-engine"
version = "3.1.0"
description = "SOLAT Trading Engine - Algorithmic trading with IG broker integration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "SOLAT Development Team" }
]
keywords = ["trading", "algorithmic-trading", "ig-broker", "backtesting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "websockets>=12.0",
    "duckdb>=0.9.0",
    "pyarrow>=14.0.0",
    "pandas>=2.1.0",
    "python-dotenv>=1.0.0",
    "psutil>=7.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "httpx>=0.26.0",  # For testing
    "respx>=0.20.0",  # For mocking httpx
]

[project.scripts]
solat-engine = "solat_engine.main:main"

[tool.hatch.build.targets.wheel]
packages = ["solat_engine"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
    "ARG001", # unused function argument
    "B027",   # empty method in abstract class (lifecycle hooks are intentionally empty)
    "SIM105", # use contextlib.suppress (prefer explicit try/except for clarity)
    "SIM108", # use ternary operator (prefer explicit if/else for readability)
]

[tool.ruff.lint.isort]
known-first-party = ["solat_engine"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "duckdb.*",
    "pyarrow.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "chaos: Chaos/failure injection tests",
    "tier1: Data corruption tests (pre-LIVE blocker)",
    "tier2: State inconsistency tests",
    "tier3: Operational blindness tests",
    "tier4: Recovery scenario tests",
]
